edited the github workflow

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,3 +46,16 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
 
+    - name: Deploy with CodeDeploy
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        APPLICATION_NAME: ${{ secrets.APPLICATION_NAME }}
+        DEPLOYMENT_GROUP: ${{ secrets.DEPLOYMENT_GROUP }}
+        S3_BUCKET: ${{ secrets.S3_BUCKET }}
+      run: |
+        aws deploy create-deployment \
+        --application-name "$APPLICATION_NAME" \
+        --deployment-group-name "$DEPLOYMENT_GROUP" \
+        --s3-location bucket="$S3_BUCKET",key=app.zip,bundleType=zip
