--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,7 +44,9 @@ jobs:
         DEPLOYMENT_GROUP: ${{ secrets.DEPLOYMENT_GROUP }}
         S3_BUCKET: ${{ secrets.S3_BUCKET }}
       run: |
+        echo "Deploying..."
         aws deploy create-deployment \
         --application-name "$APPLICATION_NAME" \
         --deployment-group-name "$DEPLOYMENT_GROUP" \
         --s3-location bucket="$S3_BUCKET",key=app.zip,bundleType=zip
+
